# system-monitoring

./: .gitignore  Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: config.rs  extractor.rs  main.rs  state.rs  webhooks.rs
core/src/: lib.rs  metrics.rs
crates/collector/: Cargo.toml
crates/collector/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: errors.rs  lib.rs  readers.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  metrics.rs  webhooks.rs
crates/web/: Cargo.toml
crates/web/src/: extractor.rs  lib.rs  routes.rs
crates/webhooks/: Cargo.toml
crates/webhooks/src/: helpers.rs  lib.rs
docs/: agent.md  openapi.yml
src/: main.rs
