[package]
name = "monitoring-agent"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*",
]

[dependencies]
agent-collector = { path = "./crates/collector" }
agent-config = { path = "./crates/config", default-features = false }
agent-web = { path = "./crates/web" }
agent-webhooks = { path = "./crates/webhooks", optional = true }
log = "0.4"
env_logger = "0.9"
futures = { version = "0.3", optional = true }
tokio = { version = "1.22", features=["macros", "rt-multi-thread"]  }

[features]
default = [ "webhooks" ]
webhooks = [ "dep:futures",  "agent-config/webhooks", "dep:agent-webhooks"]
