[package]
name = "monitoring-agent"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*",
]

[dependencies]
agent-collector = { path = "./crates/collector" }
agent-config = { path = "./crates/config", default-features = false }
agent-web = { path = "./crates/web", optional = true }
agent-webhooks = { path = "./crates/webhooks", optional = true }
log = "0.4"
env_logger = "0.9"
futures = { version = "0.3", optional = true }
tokio = { version = "1.22", features=["macros", "rt-multi-thread"]  }

[features]
default = [ "web", "webhooks", "multi" ]
web = [ "agent-config/web", "dep:agent-web" ]
webhooks = [ "agent-config/webhooks", "dep:agent-webhooks" ]
multi = [ "dep:futures" ]
