[package]
name = "monitoring-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
monitoring-core = { path = "../core"  }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
psutil = { version = "3.2", default-features = false, features = ["cpu", "memory"]}
actix-web = { version = "4.1", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
log = "0.4"
env_logger = "0.9"
uuid = { version = "1.1", features = ["v4"]  }

[features]
default = [ "webhooks"  ]
webhooks = [ ]
