[package]
name = "agent-webhooks"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../core" }
agent-config = { path = "../config", default-features = false, features = ["webhooks"] }
openssl = { version = "0.10", features = ["v110"] }
reqwest = "0.11"
serde_json = "1.0"
futures = "0.3"
log = "0.4"
